Changes to search panel, dropdown, and sidebars